# sanitizer-project

./: .gitignore  CMakeLists.txt  Makefile  README.md  coverage.sh
benchmarks/: array_sum  array_sum.c  array_sum_sanitized  binary_search.c  convolution.c  knapsack.c  matrix_mult.c  quicksort.c
llvm-pass/: Counters.h  InstrumentationPass.cpp  InstrumentationPass.h  PassPlugin.cpp  RedundantCheckPass.cpp  RedundantCheckPass.h
plots/: local_O0_O2_runtime.py  local_O0_O2_stat_vs_dyn_checks.py  local_overhead.py  local_runtimes.py  local_stat_vs_dyn_checks.py  original_bench_runtimes.py  overhead_local_bench.py  polybench_avg_runtimes.py  polybench_checks.py  polybench_overhead.py  polybench_runtimes.py  polybench_stat_vs_dyn_checks.py  runtimes_local_bench.py
results/: array_sum_base_stats.txt  array_sum_opt_stats.txt  array_sum_summary.txt  binary_search_base_stats.txt  binary_search_opt_stats.txt  binary_search_summary.txt  convolution_base_stats.txt  convolution_opt_stats.txt  convolution_summary.txt  knapsack_base_stats.txt  knapsack_opt_stats.txt  knapsack_summary.txt  matrix_mult_base_stats.txt  matrix_mult_opt_stats.txt  matrix_mult_summary.txt  quicksort_base_stats.txt  quicksort_opt_stats.txt  quicksort_summary.txt  table_O0.txt  table_O2.txt
results/polybench_O0/: 2mm_opt_stats.txt  2mm_summary.txt  3mm_opt_stats.txt  3mm_summary.txt  adi_base_stats.txt  adi_summary.txt  atax_base_stats.txt  atax_opt_stats.txt  atax_summary.txt  bicg_summary.txt  cholesky_opt_stats.txt  cholesky_summary.txt  correlation_base_stats.txt  correlation_opt_stats.txt  correlation_summary.txt  covariance_opt_stats.txt  covariance_summary.txt  datamining_correlation_correlation_base_stats.txt  datamining_correlation_correlation_opt_stats.txt  datamining_correlation_correlation_summary.txt  datamining_covariance_covariance_base_stats.txt  datamining_covariance_covariance_summary.txt  doitgen_summary.txt  durbin_base_stats.txt  durbin_summary.txt  dynprog_opt_stats.txt  dynprog_summary.txt  fdtd-2d_base_stats.txt  fdtd-2d_summary.txt  fdtd-apml_base_stats.txt  fdtd-apml_summary.txt  floyd-warshall_summary.txt  gemm_base_stats.txt  gemm_summary.txt  gemver_opt_stats.txt  gemver_summary.txt  gesummv_opt_stats.txt  gesummv_summary.txt  gramschmidt_summary.txt  jacobi-1d-imper_summary.txt  (+73 more)
results/polybench_O2/: 2mm_base_stats.txt  2mm_opt_stats.txt  2mm_summary.txt  3mm_base_stats.txt  3mm_opt_stats.txt  3mm_summary.txt  adi_opt_stats.txt  adi_summary.txt  atax_opt_stats.txt  atax_summary.txt  bicg_opt_stats.txt  bicg_summary.txt  cholesky_base_stats.txt  cholesky_opt_stats.txt  cholesky_summary.txt  correlation_base_stats.txt  (+63 more)
runtime/: check_access.c
scripts/: build_and_run.sh  build_and_run_polybench.sh  manual_test.sh  sanrazor_run.sh  summary_txt2csv.sh
(+176 files in other folders)
